terps/frankendrift/FrankenDrift.GlkRunner/FrankenDrift.GlkRunner.Gargoyle/Main.cs

using FrankenDrift.GlkRunner.Glk;
using System.Reflection;
using System.Runtime.CompilerServices;
using System.Runtime.InteropServices;

namespace FrankenDrift.GlkRunner.Gargoyle
{
    static partial class Garglk_Pinvoke
    {
        // Universal Glk functions.
        [DllImport("garglk")]
        internal static extern BlorbError giblorb_set_resource_map(StreamHandle fileStream);
        [DllImport("garglk")]
        internal static extern void glk_cancel_hyperlink_event(WindowHandle winId);
        [DllImport("garglk")]
        internal static extern void glk_cancel_line_event(WindowHandle winId, ref Event ev);
        [LibraryImport("garglk")]
        internal static partial void glk_exit();
        [DllImport("garglk")]
        internal static extern FileRefHandle glk_fileref_create_by_name(FileUsage usage, [MarshalAs(UnmanagedType.LPStr)] string name, Glk.FileMode fmode, uint rock);
        [DllImport("garglk")]
        internal static extern FileRefHandle glk_fileref_create_by_prompt(FileUsage usage, Glk.FileMode fmode, uint rock);
        [DllImport("garglk")]
        internal static extern FileRefHandle glk_fileref_create_temp(FileUsage usage, uint rock);
        [DllImport("garglk")]
        internal static extern void glk_fileref_destroy(FileRefHandle fref);
        [DllImport("garglk")]
        internal static extern uint glk_image_draw(WindowHandle winid, uint imageId, int val1, int val2);
        [LibraryImport("garglk")]
        internal static partial uint glk_image_get_info(uint imageId, ref uint width, ref uint height);
        [LibraryImport("garglk")]
        internal static partial void glk_put_buffer([MarshalAs(UnmanagedType.LPArray, ArraySubType = UnmanagedType.U1)] byte[] s, uint len);
        [DllImport("garglk")]
        internal static extern void glk_put_buffer_stream(StreamHandle streamId, [MarshalAs(UnmanagedType.LPArray, ArraySubType = UnmanagedType.U1)] byte[] s, uint len);
        [LibraryImport("garglk")]
        internal static partial void glk_put_buffer_uni([MarshalAs(UnmanagedType.LPArray, ArraySubType = UnmanagedType.U4)] uint[] s, uint len);
        [DllImport("garglk")]
        internal static extern void glk_request_char_event(WindowHandle winId);
        [DllImport("garglk")]
        internal static extern void glk_request_hyperlink_event(WindowHandle winId);
        [DllImport("garglk")]
        internal static extern unsafe void glk_request_line_event(WindowHandle win, byte* buf, uint maxlen, uint initlen);
        [DllImport("garglk")]
        internal static extern unsafe void glk_request_line_event_uni(WindowHandle win, uint* buf, uint maxlen, uint initlen);
        [DllImport("garglk")]
        internal static extern SoundChannel glk_schannel_create(uint rock);
        [DllImport("garglk")]
        internal static extern void glk_schannel_destroy(SoundChannel chan);
        [DllImport("garglk")]
        internal static extern void glk_schannel_pause(SoundChannel chan);
        [DllImport("garglk")]
        internal static extern uint glk_schannel_play(SoundChannel chan, uint sndId);
        [DllImport("garglk")]
        internal static extern uint glk_schannel_play_ext(SoundChannel chan, uint sndId, uint repeats, uint notify);
        [DllImport("garglk")]
        internal static extern void glk_schannel_set_volume(SoundChannel chan, uint vol);
        [DllImport("garglk")]
        internal static extern void glk_schannel_stop(SoundChannel chan);
        [DllImport("garglk")]
        internal static extern void glk_schannel_unpause(SoundChannel chan);
        [DllImport("garglk")]
        internal static extern void glk_select(ref Event ev);
        [LibraryImport("garglk")]
        internal static partial void glk_set_hyperlink(uint linkval);
        [DllImport("garglk")]
        internal static extern void glk_set_style(Style s);
        [DllImport("garglk")]
        internal static extern void glk_set_window(WindowHandle winId);
        [DllImport("garglk")]
        internal static extern StreamHandle glk_stream_open_file(FileRefHandle fileref, Glk.FileMode fmode, uint rock);
        [DllImport("garglk")]
        internal static unsafe extern StreamHandle glk_stream_open_memory(byte* buf, uint buflen, Glk.FileMode mode, uint rock);
        [DllImport("garglk")]
        internal static extern void glk_stream_close(StreamHandle stream, ref StreamResult streamResult);
        [DllImport("garglk")]
        internal static extern void glk_stream_set_position(StreamHandle stream, int pos, SeekMode seekMode);
        [DllImport("garglk")]
        internal static extern void glk_stylehint_set(WinType wintype, Style styl, StyleHint hint, int val);
        [DllImport("garglk")]
        internal static extern uint glk_style_measure(WindowHandle winid, Style styl, StyleHint hint, ref uint result);
        [LibraryImport("garglk")]
        internal static partial void glk_tick();
        [DllImport("garglk")]
        internal static extern void glk_window_clear(WindowHandle winId);
        [DllImport("garglk")]
        internal static extern void glk_window_close(WindowHandle winId, ref StreamResult streamResult);
        [DllImport("garglk")]
        internal static extern void glk_window_flow_break(WindowHandle winId);
        [DllImport("garglk")]
        internal static extern void glk_window_get_size(WindowHandle winId, out uint width, out uint height);
        [DllImport("garglk")]
        internal static extern StreamHandle glk_window_get_stream(WindowHandle winId);
        [DllImport("garglk")]
        internal static extern void glk_window_move_cursor(WindowHandle winId, uint xpos, uint ypos);
        [DllImport("garglk")]
        internal static extern void glk_window_set_echo_stream(WindowHandle winId, StreamHandle stream);
        [DllImport("garglk")]
        internal static extern StreamHandle glk_window_get_echo_stream(WindowHandle winId);
        [DllImport("garglk")]
        internal static extern WindowHandle glk_window_open(WindowHandle split, WinMethod method, uint size, WinType wintype, uint rock);
        [LibraryImport("garglk")]
        internal static partial void garglk_set_zcolors(uint fg, uint bg);
        [DllImport("garglk", EntryPoint = "garglk_fileref_get_name")]
        internal static extern IntPtr glkunix_fileref_get_name(FileRefHandle fileref);
        [DllImport("garglk")]
        internal static extern uint glk_gestalt(Gestalt sel, uint val);
        [DllImport("garglk")]
        internal static extern unsafe uint glk_gestalt_ext(Gestalt sel, uint val, uint* arr, uint arrlen);
        [LibraryImport("garglk")]
        internal static partial void glk_request_timer_events(uint millisecs);
        [LibraryImport("garglk")]
        internal static partial uint garglk_unput_string_count_uni([MarshalAs(UnmanagedType.LPArray, ArraySubType = UnmanagedType.U4)] uint[] str);

        // Garglk initialization functions.
        [LibraryImport("garglk")]
        internal static partial void garglk_set_program_name([MarshalAs(UnmanagedType.LPStr)] string name);
        [LibraryImport("garglk")]
        internal static partial void garglk_set_story_name([MarshalAs(UnmanagedType.LPStr)] string name);
#if !GarglkStatic
        [DllImport("libgarglk", EntryPoint = "_Z11gli_startupiPPc")]
        internal static extern void gli_startup_m_(int argc, [MarshalAs(UnmanagedType.LPArray, ArraySubType = UnmanagedType.LPStr)] string[] argv);
        [DllImport("garglk")]
        internal static extern void gli_startup(int argc, [MarshalAs(UnmanagedType.LPArray, ArraySubType = UnmanagedType.LPStr)] string[] argv);
#endif
        [LibraryImport("garglk")]
        internal static partial void garglk_startup(int argc, [MarshalAs(UnmanagedType.LPArray, ArraySubType = UnmanagedType.LPStr)] string[] argv);
    }
